Adding structure to media-query

--- a/css/style.scss
+++ b/css/style.scss
@@ -42,4 +42,28 @@ footer{
 
 @media only screen and (min-width: 1440px){
 
+    header{
+    
+    }
+    main{
+        .hero-wrapper{  /*sección de Ubaldo*/
+    
+        }
+        .search-wrapper{
+    
+        }
+        .statistics-wrapper{   /*sección de Karen*/
+    
+        }
+        .boost-wrapper{
+    
+        }
+    
+    }
+    
+    /*sección de Chava*/
+    footer{
+    
+    }
+
 }
