--- a/css/style.scss
+++ b/css/style.scss
@@ -11,16 +11,74 @@ $side-paddings: 11%;
 *{
     margin: 0;
     box-sizing: border-box;
+    font-family: $poppins;
+}
 
+button{
+    background-color: $cyan;
+    color: white;
+    border:none;
+    border-radius: 2em;
+    padding: .4em 1.1em;
+    
+    &:hover{
+        cursor: pointer;
+        background-color: #a9e6e6;
+    }
 }
 
 /*sección de Chava*/
 header{
-    
+    height: 70px;
+    width: 100vw;
+    padding: 0 $side-paddings ;
+    position: fixed;
+    top: 0;
+    left: 0;
+    // border: 1px solid black;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    img{
+        height: 30px;
+    }
+
+    .hamburger{
+        width: 30px;
+        height: 30px;
+        border: 1px solid $gray;
+        border-radius: unset;
+        background-color: transparent;
+        // ::after{
+        //     box-shadow: 0 10px 10px 0 black;
+        // }
+    }
+    nav {
+        display: none;
+        ul{
+            padding: 0;
+            list-style: none;
+            display: flex;
+            align-items: center;
+            li{
+                padding: 0 12px; 
+
+                &.sign-up-button{
+                    padding-right: 0;
+                }
+                a{
+                    text-decoration: none;
+                    color: gray;
+                }
+            }
+        }
+    }
+
 }
 main{
     .hero-wrapper{  /*sección de Ubaldo*/
-
+        margin-top: 70px;
     }
     .search-wrapper{
 
@@ -40,10 +98,20 @@ footer{
 }
 
 
-@media only screen and (min-width: 1440px){
+@media only screen and (min-width: 400px){
 
     header{
-    
+        img{
+            margin-right: 15px;
+        }
+        .hamburger{
+            display: none;
+        }
+        nav{
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+        }
     }
     main{
         .hero-wrapper{  /*sección de Ubaldo*/
