--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ button:hover {
 header {
   height: 70px;
   width: 100vw;
-  padding: 0 11%;
+  padding: 0 6%;
   position: fixed;
   top: 0;
   left: 0;
@@ -44,11 +44,24 @@ header img {
 }
 
 header .hamburger {
-  width: 30px;
-  height: 30px;
-  border: 1px solid #bfbfbf;
-  border-radius: unset;
+  padding: 0;
+  width: 25px;
+  height: 25px;
+  border-top: 4px solid #bfbfbf;
+  border-bottom: 4px solid #bfbfbf;
+  border-radius: initial;
   background-color: transparent;
+  position: relative;
+}
+
+header .hamburger:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 7px;
+  width: 25px;
+  height: 4px;
+  background-color: #bfbfbf;
 }
 
 header nav {
