--- a/css/style.scss
+++ b/css/style.scss
@@ -12,6 +12,7 @@ $mobile-side-paddings: 6%;
 
 *{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: $poppins;
 }
@@ -33,7 +34,7 @@ button{
 header{
     height: 70px;
     width: 100vw;
-    padding: 0 $mobile-side-paddings ;
+    padding: 0 $mobile-side-paddings;
     position: fixed;
     top: 0;
     left: 0;
@@ -105,13 +106,53 @@ main{
 
 /*sección de Chava*/
 footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: $very-dark-violet;
+    padding-bottom: 2em;
+    .logo{
+        height: 30px;
+        margin: 3em;
+        filter: invert(100%) sepia(10%) saturate(0%) hue-rotate(91deg) brightness(104%) contrast(104%);
+    }
+    .footer-links{
+        *{
+            color: white;
+        }
+        margin-bottom: 2em;
+        h4{
+            text-align: center;
+            margin-bottom: 1em;
+        }
+        li{
+            list-style: none;
+            text-align: center;
+            &:not(:last-of-type){
+                margin-bottom: .5em;
+            }
+        }
+        a{
+            text-decoration: none;
+        }
 
+    }
+    .media-icons{
+        display: flex;
+        justify-content: center;
+        img{
+            width: 1em;
+            height: 1em;
+            margin: 0 .8em;
+        }
+    }
 }
 
 
 @media only screen and (min-width: 400px){
 
     header{
+        padding: 0 $desktop-side-paddings;
         img{
             margin-right: 15px;
         }
@@ -142,7 +183,23 @@ footer{
     
     /*sección de Chava*/
     footer{
-    
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-between;
+        padding: 3em $desktop-side-paddings 1em;
+        
+        .logo{
+            margin:0 ;
+        }
+        .footer-content{
+            display: flex;
+            .footer-links{
+                margin-right: 4em;
+                h4, li{
+                    text-align:unset;
+                }
+            }
+        }
     }
 
 }
