--- a/css/style.scss
+++ b/css/style.scss
@@ -39,6 +39,7 @@ header{
     position: fixed;
     top: 0;
     left: 0;
+    z-index:9999;
     // border: 1px solid black;
     background-color: white;
     display: flex;
@@ -82,7 +83,7 @@ header{
                 }
                 a{
                     text-decoration: none;
-                    color: gray;
+                    color: $gray;
                 }
             }
         }
@@ -95,9 +96,10 @@ main{
         margin-top: 80px;
         padding: 0 $mobile-side-paddings;
         overflow: hidden;
-        img{
-            width: 150%
+        .hero-image img{
+                width: 150%
         }
+
         .hero-content{
 
             h1{
@@ -140,6 +142,9 @@ main{
             border-radius: 10px;
             margin-bottom: .7rem;
             padding: .4em 1.1em;
+            &::placeholder{
+                color: $gray;
+            }
         }
         button{
             border-radius: 10px;
@@ -295,8 +300,8 @@ footer{
             flex-direction: row-reverse;
             padding-left: $desktop-side-paddings;
             padding-right:0 ;
-            img{
-                width: 50%;
+            .hero-image img{
+                width: 118%;
             }
             .hero-content{
                 h1{
