--- a/css/style.scss
+++ b/css/style.scss
@@ -177,7 +177,6 @@ main{
             }
         }
         .cards-wrapper{
-            
             .card{
                 background-color: white;
                 margin-bottom: 5rem;
@@ -185,7 +184,6 @@ main{
                 padding-top: 3rem;
                 position: relative;
                 border-radius: 5px;
-                
                 div{
                     width: 66px;
                     height: 66px;
@@ -198,6 +196,7 @@ main{
                     position: absolute;
                     left: calc(50% - 33px);
                     bottom: calc(85%);
+                    z-index: 999;
                 }
                 h3{
                     color: $very-dark-blue;
@@ -209,6 +208,19 @@ main{
                     text-align: center;
                     line-height: 1.8rem;
                 }
+                &.line-cyan{
+                    position: relative;
+                    &::after{
+                        content: " ";
+                        display: block;
+                        position: absolute;
+                        background-color: $cyan;
+                        width: 6px;
+                        height: 4rem;
+                        left: calc(50% - 3px);
+                        top: 100%;
+                    }
+            }
             }
         }
     }
@@ -276,7 +288,7 @@ footer{
 }
 
 
-@media only screen and (min-width: 500px){
+@media only screen and (min-width: 1440px){
 
     header{
         padding: 0 $desktop-side-paddings;
@@ -349,18 +361,28 @@ footer{
                 justify-content: center;
                 align-items: stretch;
                 margin-bottom: 6rem;
+                p{
+                    padding-right: 25rem;
+                    padding-left: 25rem;
+                }
             }
             .cards-wrapper{
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
-                //align-items: center;
-                //height: 375px;
-
+                position: relative;
+                &::after{
+                    content: " ";
+                    background-color: $cyan;
+                    position: absolute;
+                    height: 5px;
+                    width: 100%;
+                    left: unset;
+                    top: 30%;
+                }
                 .card{
-                    //display: block;
-                    height: 275px;
-                    //width: 28%;
+                    height: 290px;
+                    z-index: 998;
                     div{
                         left: 1rem;
                     }
@@ -370,24 +392,29 @@ footer{
                     }
                     p{
                         text-align: unset;
+                        padding-top: 0;
                     }
-                    /*&:first-child {
-                        align-self: flex-start;
-                    }*/
 
                     &:nth-child(2){
-                        margin-left: 5rem;
-                        margin-right: 5rem;;
+                        margin-left: 2rem;
+                        margin-right: 2rem;;
                         margin-top: 2rem;
-                        //align-self: center;
                     }
                     
                     &:last-child {
                         margin-top: 4rem;
                     }
-
-
+                    &.line-cyan{
+                        &::after{
+                            content: " ";
+                            height: 5px;
+                            width: 4rem;
+                            left: unset;
+                            top: unset;
+                            display: none;
+                        }
                 }
+            }
             }
         }
         .boost-wrapper{
