--- a/css/style.scss
+++ b/css/style.scss
@@ -318,15 +318,16 @@ footer{
                 width: 118%;
             }
             .hero-content{
+                width: 60%;
                 h1{
                     text-align: left;
-                    margin-top: 2rem;
+                    margin-top: 4rem;
                     margin-bottom: 0;
-                    font-size: 3rem;
+                    font-size: 4.5rem;
                 }
                 p{
                     text-align: left;
-                    font-size: 16px;
+                    font-size: 1.3rem;
                     padding-right: 4rem;
                 }
                 button{
