--- a/css/style.scss
+++ b/css/style.scss
@@ -332,25 +332,33 @@ footer{
                 }
                 button{
                     display: initial;
-                    font-size: 16px;
+                    font-size: 1.3rem;
                 }
             }
         
 
         }
         .search-wrapper{
-            height: 100px;
-            top:50px;
+            height: 9rem;
+            top: 4.5rem;
             margin:0 $desktop-side-paddings ;
             flex-direction: row;
             align-items: center;
             justify-content: space-between;
             background-image: url("../images/bg-shorten-desktop.svg");
+            padding: 3rem;
+            // padding-right: 2rem;
 
             input{
                 width: 100%;
                 margin-bottom: 0;
                 margin-right: 1rem;
+                padding-top: 1rem;
+                padding-bottom: 1rem;
+            }
+            button{
+                padding-top: 1rem;
+                padding-bottom: 1rem;
             }
 
         }
@@ -375,6 +383,9 @@ footer{
                 flex-direction: row;
                 justify-content: space-between;
                 position: relative;
+                h2{
+                    font-size: 2rem;
+                }
                 &::after{
                     content: " ";
                     background-color: $cyan;
@@ -424,6 +435,12 @@ footer{
         .boost-wrapper{
             background-image: url("../images/bg-boost-desktop.svg");
             height: 250px;
+            h2{
+                font-size: 2rem;
+            }
+            button{
+                font-size: 1.3rem;
+            }
         }
     
     }
