--- a/css/style.css
+++ b/css/style.css
@@ -47,53 +47,72 @@ header img {
   height: 30px;
 }
 
-header .hamburger {
-  padding: 0;
-  width: 25px;
-  height: 25px;
-  border-top: 4px solid #bfbfbf;
-  border-bottom: 4px solid #bfbfbf;
-  border-radius: initial;
-  background-color: transparent;
-  position: relative;
-}
-
-header .hamburger:after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 7px;
-  width: 25px;
-  height: 4px;
-  background-color: #bfbfbf;
-}
-
 header nav {
+  background-color: #3b3054;
+  position: absolute;
+  top: 70px;
+  width: calc(100% - 12%);
+  border-radius: 10px;
   display: none;
 }
 
 header nav ul {
   padding: 0;
   list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 header nav ul li {
-  padding: 0 12px;
+  text-align: center;
+  padding: 21px 12px;
+  margin: 0 1rem;
 }
 
-header nav ul li.sign-up-button {
-  padding-right: 0;
+header nav ul li.sign-up-button button {
+  width: 80%;
 }
 
 header nav ul li a {
   text-decoration: none;
   color: #bfbfbf;
+}
+
+header nav ul li:nth-child(3) {
+  border-bottom: 1px solid #bfbfbf;
+}
+
+header label {
+  cursor: pointer;
+}
+
+header label:before {
+  content: " ";
+  display: block;
+  position: relative;
+  top: -13px;
+  width: 25px;
+  height: 4px;
+  background-color: #bfbfbf;
+  -webkit-box-shadow: 0 9px 0 #bfbfbf, 0 18px 0 #bfbfbf;
+          box-shadow: 0 9px 0 #bfbfbf, 0 18px 0 #bfbfbf;
+}
+
+header input {
+  display: none;
+}
+
+header input:checked ~ label::before {
+  display: none;
+}
+
+header input:checked ~ label::after {
+  content: "X";
+  position: relative;
+  font-size: 1.3rem;
+  color: #bfbfbf;
+}
+
+header input:checked ~ nav {
+  display: block;
 }
 
 main .hero-wrapper {
@@ -372,17 +391,47 @@ footer .media-icons img {
   header img {
     margin-right: 15px;
   }
-  header .hamburger {
+  header label, header input {
     display: none;
   }
   header nav {
+    background-color: unset;
+    position: unset;
+    border-radius: unset;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
     width: 100%;
+  }
+  header nav ul {
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  header nav ul li {
+    text-align: unset;
+    margin: unset;
+    padding: 0 12px;
+  }
+  header nav ul li:nth-child(3) {
+    border: none;
+  }
+  header nav ul li.sign-up-button button {
+    width: unset;
+  }
+  header nav ul li a {
+    text-decoration: none;
+    color: #bfbfbf;
   }
   main .hero-wrapper {
     /*sección de Ubaldo*/
